# cookiecutter-pypackage

./: .gitignore  CONTRIBUTING.rst  README.md  cookiecutter.json  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: dev.yml  publish.yml
docs/: console_script_setup.md  faq.md  history.md  index.md  pypi_release_checklist.md  tutorial.md
hooks/: post_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  makefile  mkdocs.yml  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/.github/workflows/: dev.yml  preview.yml
{{cookiecutter.project_slug}}/docs/: installation.md
