[tool]
[tool.poetry]
name = "cookiecutter-pypackage"
version = "0.0.1"
description = "Cookiecutter template for a Python package"
license = "BSD-3-Clause"
authors = ["Euan Mason <me@euanmason.com>"]
readme = "README.md"
repository = "https://github.com/EuanMason/cookiecutter-pypackage/"
documentation = "https://EuanMason.github.io/cookiecutter-pypackage/"
keywords = ['cookiecutter', 'template', 'package']

include = [
  '{{cookiecutter.project_slug}}/**/*',
  'cookiecutter.json',
  'hooks/*'
]

[tool.poetry.dependencies]
python = ">=3.11.*"
cookiecutter = "^2.6.0"

pytest = {version = "^8.0.2", optional=true}
pytest-cookies = {version = "^0.7.0", optional=true}
pyyaml = {version="^6.0.1",optional=true}
mkdocs = {version="^1.5.3",optional=true}
mkdocs-material = {version="^9.5.11",optional=true}
mkdocs-material-extensions = {version="^1.3.1",optional=true}
mkdocs-include-markdown-plugin = {version = "^6.0.4", optional=true}
pytest-cov = {version="^4.1.0",optional=true}
tox = {version = "^4.13.0", optional=true}
click = {version = "^8.1.7", optional = true}

[tool.poetry.extras]
dev = [
  "pytest",
  "pytest-cookies",
  "pyyaml",
  "mkdocs",
  "mkdocs-material",
  "mkdocs-material-extensions",
  "mkdocs-include-markdown-plugin",
  "pytest-cov",
  "tox",
  "click"
]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
